[gd_scene load_steps=47 format=3 uid="uid://svvv77wso7ws"]

[ext_resource type="Texture2D" uid="uid://v5krhesutvbm" path="res://Assets/GODOT_Assets/sprites/Boss1/idle.png" id="1_ccptq"]
[ext_resource type="Script" uid="uid://dt1jsh53b136n" path="res://Scripts/Boss/boss_1.gd" id="1_ms1kr"]
[ext_resource type="Texture2D" uid="uid://b8ls6q0dhg07m" path="res://Assets/GODOT_Assets/sprites/Boss1/attacking.png" id="2_iwgie"]
[ext_resource type="Texture2D" uid="uid://bvyigkhtbo1va" path="res://Assets/GODOT_Assets/sprites/Boss1/death.png" id="2_q8p7u"]
[ext_resource type="PackedScene" uid="uid://cny6hnrvv85h" path="res://Scenes/healthbar.tscn" id="4_q8p7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwgie"]
bg_color = Color(0.07, 0.07, 0.07, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_86nfm"]
atlas = ExtResource("2_iwgie")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yry26"]
atlas = ExtResource("2_iwgie")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y84wp"]
atlas = ExtResource("2_iwgie")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_odems"]
atlas = ExtResource("2_iwgie")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl1rr"]
atlas = ExtResource("2_iwgie")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wye3t"]
atlas = ExtResource("2_iwgie")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a1fw"]
atlas = ExtResource("2_iwgie")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg4aj"]
atlas = ExtResource("2_iwgie")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vym8s"]
atlas = ExtResource("2_iwgie")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_al5rd"]
atlas = ExtResource("2_iwgie")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pbyc"]
atlas = ExtResource("2_iwgie")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcphe"]
atlas = ExtResource("2_iwgie")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6ymd"]
atlas = ExtResource("2_iwgie")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0rh1"]
atlas = ExtResource("2_q8p7u")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1msb"]
atlas = ExtResource("2_q8p7u")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ip5"]
atlas = ExtResource("2_q8p7u")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j5is"]
atlas = ExtResource("2_q8p7u")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyem3"]
atlas = ExtResource("2_q8p7u")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bngfi"]
atlas = ExtResource("2_q8p7u")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ads5"]
atlas = ExtResource("2_q8p7u")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvfe3"]
atlas = ExtResource("2_q8p7u")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwuih"]
atlas = ExtResource("2_q8p7u")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt2fp"]
atlas = ExtResource("2_q8p7u")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn2xv"]
atlas = ExtResource("2_q8p7u")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akmgh"]
atlas = ExtResource("2_q8p7u")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sirps"]
atlas = ExtResource("2_q8p7u")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_py1n1"]
atlas = ExtResource("2_q8p7u")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt3w4"]
atlas = ExtResource("2_q8p7u")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruf0t"]
atlas = ExtResource("2_q8p7u")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkd4c"]
atlas = ExtResource("2_q8p7u")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_knxks"]
atlas = ExtResource("2_q8p7u")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcsvb"]
atlas = ExtResource("1_ccptq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms1kr"]
atlas = ExtResource("1_ccptq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8p7u"]
atlas = ExtResource("1_ccptq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwgie"]
atlas = ExtResource("1_ccptq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_y0rh1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86nfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yry26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y84wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odems")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl1rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wye3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a1fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg4aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vym8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al5rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcphe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6ymd")
}],
"loop": true,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0rh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1msb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ip5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j5is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyem3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bngfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ads5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvfe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwuih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt2fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn2xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akmgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sirps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py1n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt3w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruf0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkd4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knxks")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcsvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms1kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8p7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwgie")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1msb"]
radius = 4.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ms1kr"]
radius = 12.0
height = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8p7u"]
size = Vector2(324.5, 149)

[sub_resource type="CircleShape2D" id="CircleShape2D_q8p7u"]
radius = 27.074

[node name="Boss1" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ms1kr")
max_health = 25

[node name="Healthbar" parent="." instance=ExtResource("4_q8p7u")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -53.0
offset_right = 51.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_iwgie")
script = null
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 3)
sprite_frames = SubResource("SpriteFrames_y0rh1")
animation = &"Attack1"
autoplay = "Idle"
frame = 4
frame_progress = 0.618901

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 3)
shape = SubResource("CapsuleShape2D_f1msb")

[node name="BossHurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossHurtbox"]
position = Vector2(-2, 2)
shape = SubResource("CapsuleShape2D_ms1kr")

[node name="BossAwarenessArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossAwarenessArea"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_q8p7u")

[node name="BossAttackArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossAttackArea"]
position = Vector2(7, 0)
shape = SubResource("CircleShape2D_q8p7u")
